--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "dotenv": "^5.0.1",
+    "firebase": "^4.12.1",
+    "moment": "^2.19.3",
+    "nprogress": "^0.2.0",
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
